--- a/Netflix.ipynb
+++ b/Netflix.ipynb
@@ -328,8 +328,8 @@
    ],
    "source": [
     "genre_tv = genre_data[(genre_data['type'] == 'TV Show')].value_counts().nlargest(10).to_frame() \n",
-    "genre_tv.reset_index(level=[0,1], inplace=True)\n",
-    "genre_tv.rename(columns = {0: 'count'}, inplace= True)\n",
+    "genre_tv.reset_index(level = [0,1], inplace =True)\n",
+    "genre_tv.rename(columns = {0: 'count'}, inplace = True)\n",
     "genre_tv"
    ]
   },
@@ -546,7 +546,10 @@
     }
    ],
    "source": [
-    "directors_movies = director_data[(director_data['type'] == 'Movie') & (director_data['director'] != 'No Director')].value_counts().nlargest(10).to_frame() \n",
+    "directors_movies = (director_data[(director_data['type'] == 'Movie') & (director_data['director'] != 'No Director')]\n",
+    "                   .value_counts()\n",
+    "                   .nlargest(10)\n",
+    "                   .to_frame()) \n",
     "directors_movies.reset_index(level=[0,1], inplace=True)\n",
     "directors_movies.rename(columns = {0: 'count'}, inplace= True)\n",
     "directors_movies"
