--- a/Netflix_Analysis.ipynb
+++ b/Netflix_Analysis.ipynb
@@ -239,29 +239,24 @@
    "outputs": [],
    "source": [
     "def column_list_tokenizer_count(df, subset_cols, secondary_col):\n",
-    "    '''\n",
-    "    df: Insert the dataframe that you're working with (only works for the columns you are trying to tokenize within a list).\n",
     "\n",
-    "    subset_cols: Insert a column that you want to subset to remove any missing values within that column. Keep in mind this will       also be the columns that will be tokenized once you insert into the function.\n",
-    "\n",
-    "    secondary_col: Insert an additional column if you would like to filter a specific value from the new counted dataset. If not,      just input 'None'.\n",
-    "    \n",
-    "    (Headsup!: Once you use the function do not worry about the name of the columns it will give you the same output if you were       to use it normally, you can always rename it by using the '.rename()' method. Always use the .columns method! There could be a     pesky whitespace that could output an error when renaming the columns!)\n",
-    "    '''\n",
     "    # Creating an empty list\n",
     "    token_list = []\n",
     "\n",
-    "    # Removing any missing values just in case if they are any within the dataset. As well reseting the index.\n",
+    "    # Removing any missing values just in case if they are any within the dataset. \n",
+    "    # As well reseting the index.\n",
     "    clean_df = df.dropna(subset = [subset_cols])\n",
     "    clean_df.reset_index(inplace = True)\n",
     "    \n",
-    "    # This for loop would go to every single row and split the string values into a list essentially tokenizing them.\n",
+    "    # This for loop would go to every single row and split the string \n",
+    "    # values into a list essentially tokenizing them.\n",
     "    if secondary_col == None:\n",
     "        for i, element in clean_df.iterrows():\n",
     "            for token in str(element[subset_cols]).strip(' ').split(','):\n",
     "                token_list.append([token.strip()])\n",
     "\n",
-    "    # Returns a dataframe based from the appended list and counting each unique value from the inserted 'subset_cols' variable.\n",
+    "    # Returns a dataframe based from the appended list and counting each unique value \n",
+    "    # from the inserted 'subset_cols' variable.\n",
     "        token_data = pd.DataFrame(data = token_list, columns = [token])\n",
     "        return token_data\n",
     "    else:\n",
